--- a/styles/home.css
+++ b/styles/home.css
@@ -1,46 +1,57 @@
-
-.nav-custom-button {
-    font-size: var(--fs-s);
-    width: 100px;
-    padding: 10px 29px;
-    border-radius: 40px;
-    background-color: rgb(63, 134, 255);
-    box-shadow: 0 10px 20px #00000037;
-    display: inline-block;
-    text-decoration: none;
-}
-.nav-custom-button:any-link {
-    color: #fff;
-}
 .header_wrapper {
-    -webkit-transition: all .2s linear;
-    -o-transition: all .2s linear;
-    -moz-transition: all .2s linear;
-    -ms-transition: all .2s linear;
-    transition: all .2s linear;
+    width: 100%;
+    padding: 10px 90px;
 }
-.header_wrapper .navbar-brand .logo {
-    max-width: 50px;
-    margin: 0 20px;
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    height: 50px;
+    width: auto;
     border-radius: 50%;
 }
 
-.header_wrapper .menu-navbar-nav {
-    width: 70%;
+.nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    gap: 40px;
     display: flex;
-    justify-content: center;
 }
-
-.header_wrapper .nav-item {
-    margin: 0 1rem;
+.nav-link:any-link {
+    color: #fff;
 }
-
-.header_wrapper .nav-item .nav-link {
+.nav-link {
+    margin: 0;
     font-weight: var(--fw-l);
-    font-size: var(--fs-s);
-    line-height: 1;
 }
 
-.navbar-toggler i {
-    height: 100%;
+.menu-button {
+    display: none;
+    height: 40px;
+    width: 40px;
+    background: none;
+    border: none;
+}
+
+.menu-button i {
+    color: #fff;
+    font-size: x-large;
+}
+
+.support {
+    padding: 10px 15px;
+    border-radius: 20px;
+    text-align: center;
+    font-weight: var(--fw-l);
+    display: inline-block;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    color: #FFF;
+    background-color: #9052A2;
 }
