Updated Hero section - aligned background image - updated mobile screen

--- a/styles/_main.css
+++ b/styles/_main.css
@@ -32,8 +32,8 @@ html {
 
     /* || color scheme */
     --dark: #011638;
-    --main: #2E294E;
-    --primary: #9055A2;
+    --main: #201c39;
+    --primary: #d414e2;
     --secondary: #D499B9;
 }
 
