--- a/styles/home.css
+++ b/styles/home.css
@@ -70,7 +70,7 @@
 .hero-bg {
     position: absolute;
     bottom: 0;
-    right: 10%;
+    right: 5%;
     height: 97%;
     width: auto;
     z-index: -100;
@@ -82,7 +82,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items: baseline;
     position: relative;
     left: -100px;
 }
@@ -102,6 +102,7 @@
 }
 .hero-top .hero-small-text {
     font-size: 4rem;
+    width: 80%;
     color: #fff;
     font-weight: var(--fw-xl);
     line-height: 0.7;
@@ -124,7 +125,7 @@
     color: var(--secondary);
     font-weight: var(--fw-l);
     line-height: 0.9;
-    width: 100%;
+    width: 80%;
     padding: 0 20% 0 0;
     text-align: left;
 }
