Corrected Error in responsive.css

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -100,7 +100,7 @@
         font-weight: normal;
     }
     .reviews-header {
-        magin-bottom: 0;
+        margin-bottom: 1rem;
     }
     .reviews-bottom {
         width: 90%;
